# python_valletta_all

./: .gitignore  bmi_calculator.py  hash  pyproject.toml  requirements.txt  requirements2.txt  requirements3.txt
.valletta/: pyvenv.cfg
.valletta/Scripts/: activate  activate.bat  jsonpointer
Ch01. 파이썬 라이브러리의 이해/: 03. 인코딩과 디코딩.py  04. 클로저와 데코레이터.ipynb  05. 이터레이터와 제네레이터.ipynb  06. 변수 타입 어노테이션.ipynb  07. 문자열 처리 - str()과 repr().ipynb  08. 외부 라이브러리 다루기 - pip.ipynb
Ch02. 텍스트 뉴스 기사 3줄 요약하기/: 02. 바이너리 파일을 문자열로 변경 - base64.ipynb  03. 문자열 다루기 - textwrap.ipynb  04. 단어 개수 구하기 - collections.Counter.ipynb  05. 문서 요약하기 - gensim.ipynb  06. 텍스트 파일 저장 - open, close.ipynb  07. 프로젝트 실습.ipynb  07. 프로젝트 실습.py  새파일.txt
Ch02. 텍스트 뉴스 기사 3줄 요약하기/news/: summary.html
Ch03. 날짜 - 달력 만들기/: 02. 날짜 및 요일 계산 - datetime.py  03. 윤년 확인 - calendar.isleap.py  03. 윤년 확인.py  04. 날짜 출력 - strptime, strftime.py  05. 그 외 시간 관련 - dateutil, time.ipynb  06. 프로젝트 실습.ipynb
Ch04. [디렉토리] 업무효율 향상을 위한 폴더 관리 프로그램 만들기/: 02. 디렉토리 다루기 - os.path, pathlib.ipynb  03. 파일 읽기, 저장 - fileinput, pickle.ipynb  04. 파일 찾기, 복사, 이동 - glob, fnmatch, shutil.ipynb  05. 파일 압축 - zlib, gzip, zipfile, tarfile.ipynb  06. 미니 프로젝트 실습.ipynb  filelist.xlsx
Ch04. [디렉토리] 업무효율 향상을 위한 폴더 관리 프로그램 만들기/sample/: 새파일1.txt  새파일2.txt  새파일3.txt
Ch05. [데이터베이스] 쇼핑몰 데이터베이스 만들/: 02. CSV 파일 다루기 - csv.ipynb  04. 데이터 불러오기, 조회하기 - fetchone, fetchall.ipynb  05. 데이터 삽입, 수정, 삭제.ipynb  07. 미니 프로젝트 실습.ipynb  backup.sql  product_list.csv  shop.db  test.db
Ch06. [암호화] 개인정보, 메시지 변조 탐지기 만들기/: 02. 정규표현식으로 개인정보 보호 - re.ipynb  03. 비밀번호 감추기 - getpass.ipynb  04. 비밀번호 암호화 hashlib.ipynb  05. 메시지 변조 확인 - hmac.ipynb  06. 안전한 난수를 생성할 땐 - secrete.ipynb  06. 안전한 난수를 생성할 땐 - secrets.ipynb  07. 미니 프로젝트 실습.ipynb  message_encrypted.txt
Ch07. [시스템] N배 빠른 병렬처리 웹 크롤러 만들기/: 02. 시스템 정보 확인 - platform.ipynb  03. 매개변수 01.py  03. 매개변수 입력 받기 - sys.argv, argparse.ipynb  04. 디버깅의 기본! 로그 남기기 - logging.ipynb  05. 원하는 시간에 작업 실행 - sched.ipynb  07. 병렬 처리 2 - multiprocessing.ipynb  08. 시스템 명령어 실행.ipynb  09. 미니 프로젝트 실습.ipynb  output3.txt  project_example.py  test.py
Ch08. [서버, 통신] 사이트 접속자 수 맞추기 게임/: 02. 서버와 통신하기 - socket.ipynb  03. 여러 명이 동시에 접속하려면 - select.ipynb  echo_client.py  echo_server.py  echo_server_multi.py  signal_sample.py
Ch09. [인터넷, 웹] 최신 뉴스 이메일로 받아보기/: 02. 웹브라우저 실행 및 저장 - webbrowser, urllib.ipynb  04. 이메일 확인하기 - poplib.ipynb  05. 이메일 보내기 - smtplib.ipynb  07. 미니 프로젝트 실습.ipynb  html_sample_1.html  news_test.py
Part01/Ch02. 텍스트 뉴스 기사 3줄 요약하기/: 새파일.txt
libs/: email_sender.py  evparser.py
(+124 files in other folders)
