[tool.poetry]
name = "python-valletta-all"
version = "0.1.0"
description = "python_valletta_all description"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
jupyter = "^1.0.0"
poetry-add-requirements-txt = "^1.4.0"
anyio = {version = "4.2.0", markers = "python_full_version == \"3.12.1\""}
appnope = {version = "0.1.3", markers = "platform_system == \"Darwin\" and python_full_version == \"3.12.1\""}
argon2-cffi-bindings = {version = "21.2.0", markers = "python_full_version == \"3.12.1\""}
argon2-cffi = {version = "23.1.0", markers = "python_full_version == \"3.12.1\""}
arrow = {version = "1.3.0", markers = "python_full_version == \"3.12.1\""}
asttokens = {version = "2.4.1", markers = "python_full_version == \"3.12.1\""}
async-lru = {version = "2.0.4", markers = "python_full_version == \"3.12.1\""}
attrs = {version = "23.2.0", markers = "python_full_version == \"3.12.1\""}
babel = {version = "2.14.0", markers = "python_full_version == \"3.12.1\""}
beautifulsoup4 = {version = "4.12.3", markers = "python_full_version == \"3.12.1\""}
bleach = {version = "6.1.0", markers = "python_full_version == \"3.12.1\""}
certifi = {version = "2023.11.17", markers = "python_full_version == \"3.12.1\""}
cffi = {version = "1.16.0", markers = "python_full_version == \"3.12.1\""}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
