[tool.poetry]
name = "python-valletta-all"
version = "0.1.0"
description = ""
authors = ["Ju Hyun <polozh@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.2"
pydev = "^0.0.1"
pandas = "^2.2.0"
schedule = "^1.2.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
