[tool.poetry]
name = "python-valletta-all"
version = "0.1.0"
description = ""
authors = ["Ju Hyun <polozh@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.2"
pydev = "^0.0.1"
pandas = "^2.2.0"
schedule = "^1.2.1"
jupyter = "^1.0.0"
bs4 = "^0.0.2"
requests = "^2.31.0"
nbconvert = "^7.16.1"
ipython = "^8.21.0"
pyarrow = "^15.0.0"
selenium = "^4.18.1"
chromedriver-autoinstaller = "^0.6.4"
by = "^0.0.4"
chromedrivermanager = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
